스킬클래스 추가 클래스 안에 함수를 만들어 스킬의 기본정보 입력   --회의 한 후에 고칠수 있음----

--- a/WindowsAPI.vcxproj.filters
+++ b/WindowsAPI.vcxproj.filters
@@ -201,6 +201,9 @@
     <ClInclude Include="spearow.h">
       <Filter>playGround\poketmonManager</Filter>
     </ClInclude>
+    <ClInclude Include="skill.h">
+      <Filter>playGround\poketmonManager</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="WindowsAPI.cpp">
@@ -321,6 +324,9 @@
       <Filter>playGround\poketmonManager</Filter>
     </ClCompile>
     <ClCompile Include="spearow.cpp">
+      <Filter>playGround\poketmonManager</Filter>
+    </ClCompile>
+    <ClCompile Include="skill.cpp">
       <Filter>playGround\poketmonManager</Filter>
     </ClCompile>
   </ItemGroup>
