--- a/WindowsAPI.vcxproj
+++ b/WindowsAPI.vcxproj
@@ -180,6 +180,7 @@
     <ClInclude Include="Resource.h" />
     <ClInclude Include="sceneManager.h" />
     <ClInclude Include="singletonBase.h" />
+    <ClInclude Include="skill.h" />
     <ClInclude Include="soundManager.h" />
     <ClInclude Include="spearow.h" />
     <ClInclude Include="targetver.h" />
@@ -227,6 +228,7 @@
     <ClCompile Include="progressBar.cpp" />
     <ClCompile Include="rattata.cpp" />
     <ClCompile Include="sceneManager.cpp" />
+    <ClCompile Include="skill.cpp" />
     <ClCompile Include="soundManager.cpp" />
     <ClCompile Include="spearow.cpp" />
     <ClCompile Include="tileMap.cpp" />
