npc 추가 및 이미지 추가

--- a/WindowsAPI.vcxproj
+++ b/WindowsAPI.vcxproj
@@ -167,6 +167,7 @@
     <ClInclude Include="iniDataManager.h" />
     <ClInclude Include="keyAniManager.h" />
     <ClInclude Include="keyManager.h" />
+    <ClInclude Include="npc.h" />
     <ClInclude Include="openingScene.h" />
     <ClInclude Include="pch.h" />
     <ClInclude Include="pidgey.h" />
@@ -213,6 +214,7 @@
     <ClCompile Include="iniDataManager.cpp" />
     <ClCompile Include="keyAniManager.cpp" />
     <ClCompile Include="keyManager.cpp" />
+    <ClCompile Include="npc.cpp" />
     <ClCompile Include="openingScene.cpp" />
     <ClCompile Include="pch.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
